--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,7 +124,7 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground break-keep;
+    @apply bg-background text-foreground overflow-x-hidden break-keep;
   }
 }
 
