--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,7 +142,6 @@
       transform: scale(1);
     }
   }
-
   @keyframes fade-out-scale {
     0% {
       opacity: 0;
@@ -164,9 +163,9 @@ body[data-scroll-lock] {
   padding-right: 0px;
   margin-left: 0;
   margin-top: 0;
-  margin-right: 15px !important;
+  margin-right: var(--scrollbar-width) !important;
 }
 
 [data-scroll-lock] .header {
-  margin-right: 15px;
+  margin-right: var(--scrollbar-width);
 }
